# embedbot-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  embed-bot.service  embedbot.conf.default  embedbot.json  system-update.sh  todo.txt  update.sh
config/: init.json  runtime.json
deploy/: Dockerfile  system-update.sh  update.sh
src/: embed.rs  embed_bot.rs  main.rs
src/embed_bot/: interface.rs  mod.rs  settings.rs
src/post_grab_api/: imgur.rs  mod.rs  ninegag.rs  reddit.rs  svg.rs  twitter.rs  util.rs
src/post_grab_api/reddit/: mod.rs  module_settings.rs
test_data/reddit/: gallery.json  image.json  video.json
