[package]
name = "embedbot-rs"
version = "0.4.0"
authors = ["Liss Heidrich"]
resolver = "2"
edition = "2021"

[dependencies]
clap = { version = "4.4.10", features = ["derive", "string"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "^0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread", "signal"] }
url = "^2"
serenity = { version = "0.11.5", default-features = false, features = ["rustls_backend", "model", "client", "gateway"] }

resvg = { version = "0.19.0", optional = true }
usvg = { version = "0.19.0", optional = true }
tiny-skia = { version = "0.6.1", optional = true }
tempfile = { version = "3.2.0", optional = true }

scraper = { version = "0.18.1", optional = true }
json_nav = { git = "https://github.com/Clueliss/json_nav", optional = true }
headless_chrome = { version = "1.0.8", optional = true }


[features]
default = ["reddit", "ninegag", "svg", "twitter", "implicit-auto-embed"]
svg = ["dep:resvg", "dep:usvg", "dep:tiny-skia", "dep:tempfile"]
reddit = ["dep:json_nav"]
ninegag = ["dep:scraper", "dep:json_nav"]
twitter = ["dep:scraper", "dep:headless_chrome"]
implicit-auto-embed = []
