[package]
name = "embedbot-rs"
version = "0.4.0"
authors = ["Liss Heidrich"]
resolver = "2"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "string"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.57"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.5.0"
serenity = { version = "0.11.7", default-features = false, features = ["rustls_backend", "model", "client", "gateway"] }
itertools = "0.12.1"

resvg = { version = "0.40.0", optional = true }
tempfile = { version = "3.10.1", optional = true }

scraper = { version = "0.19.0", optional = true }
json_nav = { git = "https://github.com/Clueliss/json_nav", optional = true }
headless_chrome = { version = "1.0.9", optional = true }


[features]
default = ["reddit", "ninegag", "svg", "twitter", "implicit-auto-embed"]
svg = ["dep:resvg", "dep:tempfile"]
reddit = ["dep:json_nav"]
ninegag = ["dep:scraper", "dep:json_nav"]
twitter = ["dep:scraper", "dep:headless_chrome"]
implicit-auto-embed = []
